--- a/deploy/crd.yaml
+++ b/deploy/crd.yaml
@@ -11,3 +11,35 @@ spec:
     singular: rpaasinstance
   scope: Namespaced
   version: v1alpha1
+
+---
+
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: rpaasbinds.extensions.tsuru.io
+spec:
+  group: extensions.tsuru.io
+  names:
+    kind: RpaasBind
+    listKind: RpaasBindList
+    plural: rpaasbinds
+    singular: rpaasbind
+  scope: Namespaced
+  version: v1alpha1
+
+---
+
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: rpaasplans.extensions.tsuru.io
+spec:
+  group: extensions.tsuru.io
+  names:
+    kind: RpaasPlan
+    listKind: RpaasPlanList
+    plural: rpaasplans
+    singular: rpaasplan
+  scope: Namespaced
+  version: v1alpha1
