Update definitions for operator-sdk 0.5.0

--- a/deploy/crds/extensions_v1alpha1_rpaasplan_cr.yaml
+++ b/deploy/crds/extensions_v1alpha1_rpaasplan_cr.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions.tsuru.io/v1alpha1
 kind: RpaasPlan
 metadata:
-  name: planx
+  name: example-rpaasplan
 spec:
   image: "helder/nginx-extras:latest"
   config:
