--- a/deploy/crds/extensions_v1alpha1_rpaasbind_crd.yaml
+++ b/deploy/crds/extensions_v1alpha1_rpaasbind_crd.yaml
@@ -1,6 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
+  creationTimestamp: null
   name: rpaasbinds.extensions.tsuru.io
 spec:
   group: extensions.tsuru.io
@@ -10,6 +11,23 @@ spec:
     plural: rpaasbinds
     singular: rpaasbind
   scope: Namespaced
-  version: v1alpha1
   subresources:
     status: {}
+  validation:
+    openAPIV3Schema:
+      properties:
+        apiVersion:
+          type: string
+        kind:
+          type: string
+        metadata:
+          type: object
+        spec:
+          type: object
+        status:
+          type: object
+  version: v1alpha1
+  versions:
+  - name: v1alpha1
+    served: true
+    storage: true
