--- a/deploy/crds/extensions_v1alpha1_rpaasinstance_cr.yaml
+++ b/deploy/crds/extensions_v1alpha1_rpaasinstance_cr.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions.tsuru.io/v1alpha1
 kind: RpaasInstance
 metadata:
-  name: example
+  name: example-rpaasinstance
 spec:
   replicas: 1
   planName: planx
