--- a/deploy/crds/extensions_v1alpha1_rpaasinstance_cr.yaml
+++ b/deploy/crds/extensions_v1alpha1_rpaasinstance_cr.yaml
@@ -4,7 +4,7 @@ metadata:
   name: example-rpaasinstance
 spec:
   replicas: 1
-  planName: planx
+  planName: example-rpaasplan
   locations:
   - config:
       value: "location / { echo hello world; }"
