--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -1,11 +1,12 @@
-kind: RoleBinding
+kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: rpaas-operator
 subjects:
 - kind: ServiceAccount
   name: rpaas-operator
+  namespace: rpaas-operator-integration
 roleRef:
-  kind: Role
+  kind: ClusterRole
   name: rpaas-operator
   apiGroup: rbac.authorization.k8s.io
