Refactor instance creation on namespaces and allow loadbalancer opts

--- a/deploy/crds/extensions_v1alpha1_rpaasplan_crd.yaml
+++ b/deploy/crds/extensions_v1alpha1_rpaasplan_crd.yaml
@@ -10,7 +10,7 @@ spec:
     listKind: RpaasPlanList
     plural: rpaasplans
     singular: rpaasplan
-  scope: Namespaced
+  scope: Cluster
   subresources:
     status: {}
   validation:
