--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ jobs:
     script: make test
     go: 1.12.x
   - stage: integration
-    script: ./scripts/localkube-integration.sh
+    script: make test/integration
     go: 1.12.x
     env:
     - KUBERNETES_VERSION=v1.14.2
