add the SHA256 method to safely digest any input object

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -81,3 +81,7 @@ required = [
   [[prune.project]]
     name = "github.com/tsuru/nginx-operator"
     non-go = false
+
+[[constraint]]
+  name = "github.com/davecgh/go-spew"
+  version = "1.1.1"
