--- a/test/testdata/rpaasplan-basic.yaml
+++ b/test/testdata/rpaasplan-basic.yaml
@@ -5,3 +5,10 @@ metadata:
 spec:
   image: tsuru/nginx-tsuru:1.15.0
   config: {}
+  resources:
+    requests:
+      memory: "64Mi"
+      cpu: "250m"
+    limits:
+      memory: "128Mi"
+      cpu: "500m"
