pkg,rpaas: support getting value from default namespace

--- a/test/testdata/rpaas-full.yaml
+++ b/test/testdata/rpaas-full.yaml
@@ -50,14 +50,17 @@ spec:
   planName: basic
   blocks:
     root:
-      kind: Inline
       value: "# My custom root block"
     http:
-      kind: ConfigMap
-      name: my-instance-blocks
+      valueFrom:
+        configMapKeyRef:
+          name: my-instance-blocks
+          key: http
     server:
-      kind: ConfigMap
-      name: my-instance-blocks
+      valueFrom:
+        configMapKeyRef:
+          name: my-instance-blocks
+          key: server
   certificates:
     secretName: my-instance-certificates
     items:
