travis: add env labels to tasks

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,10 @@ jobs:
   include:
   - stage: test
     script: make test
+    env: JOB=test
   - stage: test
     script: make lint
+    env: JOB=lint
   - stage: integration
     script: make test/integration
     env:
