refactor(api,controller): move affinity logic to Rpaas API

--- a/test/testdata/rpaas-full.yaml
+++ b/test/testdata/rpaas-full.yaml
@@ -75,3 +75,6 @@ spec:
       rpaas.extensions.tsuru.io/custom-annotation: custom-annotation-value
     labels:
       custom-label: custom-label-value
+  podTemplate:
+    labels:
+      pod-custom-label: label-value
