chore(controller): add HPA into ClusterRole

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -53,3 +53,9 @@ rules:
   - '*'
   verbs:
   - '*'
+- apiGroups:
+  - autoscaling/v2beta2
+  resources:
+  - HorizontalPodAutoscaler
+  verbs:
+  - '*'
