chore(controller): drop API version of ClusterRole's apiGroups field
Co-Authored-By: Cezar Sá Espinola <cezarsa@gmail.com>

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -54,7 +54,7 @@ rules:
   verbs:
   - '*'
 - apiGroups:
-  - autoscaling/v2beta2
+  - autoscaling
   resources:
   - HorizontalPodAutoscaler
   verbs:
