feat(k8s/types): create RpaasFlavor custom resource

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -42,9 +42,9 @@ rules:
 - apiGroups:
   - extensions.tsuru.io
   resources:
-  - '*'
   - rpaasinstances
-  - rpaasbinds
+  - rpaasplans
+  - rpaasflavors
   verbs:
   - '*'
 - apiGroups:
