--- a/deploy/crds/extensions_v1alpha1_rpaasinstance_crd.yaml
+++ b/deploy/crds/extensions_v1alpha1_rpaasinstance_crd.yaml
@@ -1,7 +1,6 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  creationTimestamp: null
   name: rpaasinstances.extensions.tsuru.io
 spec:
   group: extensions.tsuru.io
@@ -13,19 +12,7 @@ spec:
   scope: Namespaced
   subresources:
     status: {}
-  validation:
-    openAPIV3Schema:
-      properties:
-        apiVersion:
-          type: string
-        kind:
-          type: string
-        metadata:
-          type: object
-        spec:
-          type: object
-        status:
-          type: object
+  validation: {}
   version: v1alpha1
   versions:
   - name: v1alpha1
