--- a/deploy/crds/extensions_v1alpha1_rpaasplan_crd.yaml
+++ b/deploy/crds/extensions_v1alpha1_rpaasplan_crd.yaml
@@ -1,7 +1,6 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  creationTimestamp: null
   name: rpaasplans.extensions.tsuru.io
 spec:
   group: extensions.tsuru.io
@@ -10,22 +9,8 @@ spec:
     listKind: RpaasPlanList
     plural: rpaasplans
     singular: rpaasplan
-  scope: Cluster
-  subresources:
-    status: {}
-  validation:
-    openAPIV3Schema:
-      properties:
-        apiVersion:
-          type: string
-        kind:
-          type: string
-        metadata:
-          type: object
-        spec:
-          type: object
-        status:
-          type: object
+  scope: Namespaced
+  validation: {}
   version: v1alpha1
   versions:
   - name: v1alpha1
