chore(ci): run golangci-lint on v1.23.8 version

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,9 @@ jobs:
     env: JOB=test
   - stage: test
     script: make lint
-    env: JOB=lint
+    env:
+    - JOB=lint
+    - GOLANGCI_LINT_VERSION=v1.23.8
   - stage: integration
     script: make test/integration
     env:
