--- a/test/testdata/rpaas-full.yaml
+++ b/test/testdata/rpaas-full.yaml
@@ -3,8 +3,14 @@ kind: RpaasPlan
 metadata:
   name: basic
 spec:
-  image: tsuru/nginx-tsuru:1.15.0
-  config: {}
+  image: tsuru/nginx-tsuru:1.16.1
+  config:
+    cacheEnabled: true
+    cachePath: /var/cache/nginx
+    cacheZoneSize: 100m
+    cacheSize: 300m
+
+    cacheHeaterEnabled: true
   resources:
     limits:
       memory: "128Mi"
