--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -60,3 +60,27 @@ rules:
   - horizontalpodautoscalers
   verbs:
   - '*'
+- apiGroups:
+  - batch
+  resources:
+  - jobs
+  - cronjobs
+  verbs:
+  - '*'
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: rpaas-cache-syncer
+rules:
+- apiGroups: [""]
+  resources:
+  - pods
+  verbs:
+  - get
+  - list
+- apiGroups: [""]
+  resources:
+  - pods/exec
+  verbs:
+  - create
