--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -10,3 +10,16 @@ roleRef:
   kind: ClusterRole
   name: rpaas-operator
   apiGroup: rbac.authorization.k8s.io
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: rpaas-cache-heater-cronjob
+subjects:
+- kind: ServiceAccount
+  name: rpaas-cache-heater
+  namespace: rpaas-operator-integration
+roleRef:
+  kind: ClusterRole
+  name: rpaas-cache-syncer
+  apiGroup: rbac.authorization.k8s.io
