--- a/deploy/service_account.yaml
+++ b/deploy/service_account.yaml
@@ -2,3 +2,8 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: rpaas-operator
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: rpaas-cache-heater
