--- a/test/testdata/hello-app.yaml
+++ b/test/testdata/hello-app.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: hello
-        image: gcr.io/hello-minikube-zero-install/hello-node
+        image: k8s.gcr.io/echoserver:1.4
 ---
 apiVersion: v1
 kind: Service
