adding rbac to session tickets rotator

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -84,3 +84,15 @@ rules:
   - pods/exec
   verbs:
   - create
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: rpaas-session-tickets-rotator
+rules:
+- apiGroups: [""]
+  resources:
+  - secrets
+  verbs:
+  - get
+  - patch
