--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -23,3 +23,17 @@ roleRef:
   kind: ClusterRole
   name: rpaas-cache-syncer
   apiGroup: rbac.authorization.k8s.io
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: rpaas-session-tickets-rotator
+subjects:
+- kind: ServiceAccount
+  name: rpaas-session-tickets-rotator
+  namespace: rpaas-operator-integration
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: rpaas-session-tickets-rotator
+---
