--- a/deploy/service_account.yaml
+++ b/deploy/service_account.yaml
@@ -7,3 +7,9 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: rpaas-cache-snapshot
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: rpaas-session-tickets-rotator
+---
