--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -86,7 +86,7 @@ rules:
   - create
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
   name: rpaas-session-tickets-rotator
 rules:
