--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -24,7 +24,7 @@ roleRef:
   name: rpaas-cache-syncer
   apiGroup: rbac.authorization.k8s.io
 ---
-kind: ClusterRoleBinding
+kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: rpaas-session-tickets-rotator
@@ -34,6 +34,6 @@ subjects:
   namespace: rpaas-operator-integration
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
+  kind: Role
   name: rpaas-session-tickets-rotator
 ---
