--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -67,6 +67,12 @@ rules:
   - cronjobs
   verbs:
   - '*'
+# NOTE: Pod exec is required by RPaaS API due to PR #83.
+- apiGroups: [""]
+  resources:
+  - pods/exec
+  verbs:
+  - create
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
