--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -21,4 +21,4 @@ patchesStrategicMerge:
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
 configurations:
-- kustomizeconfig.yaml
+#- kustomizeconfig.yaml
