--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,6 +49,41 @@ jobs:
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
     - uses: docker/build-push-action@v2
       with:
+        file: ./Dockerfile.api
+        push: true
+        tags: ${{ steps.smarttag.outputs.tag }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache
+
+  rpaas-operator-docker-image:
+    name: "Publish rpaas-operator image on dockerhub"
+    needs:
+    - test
+    - lint
+    runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
+    steps:
+    - uses: actions/checkout@v2
+    - uses: docker/setup-buildx-action@v1
+    - uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+    - uses: Surgo/docker-smart-tag-action@v1
+      id: smarttag
+      with:
+        docker_image: tsuru/rpaas-operator
+        default_branch: master
+        tag_with_sha: "true"
+    - uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    - uses: docker/build-push-action@v2
+      with:
+        file: ./Dockerfile.operator
         push: true
         tags: ${{ steps.smarttag.outputs.tag }}
         cache-from: type=local,src=/tmp/.buildx-cache
