--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -16,6 +16,10 @@ spec:
     singular: rpaasinstance
   scope: Namespaced
   subresources:
+    scale:
+      labelSelectorPath: .status.podSelector
+      specReplicasPath: .spec.replicas
+      statusReplicasPath: .status.currentReplicas
     status: {}
   validation:
     openAPIV3Schema:
@@ -3838,6 +3842,15 @@ spec:
                 between explicit zero and not specified. Defaults to 1.
               format: int32
               type: integer
+            rolloutNginx:
+              description: RolloutNginx causes the controller to always update the
+                nginx object regardless of the default behavior on the controller.
+              type: boolean
+            rolloutNginxOnce:
+              description: RolloutNginxOnce causes a rollout of the nginx object if
+                changes are detected only once. After updating the nginx object the
+                controller will set this value to false.
+              type: boolean
             service:
               description: Service to expose the nginx instance
               properties:
@@ -3908,6 +3921,26 @@ spec:
           type: object
         status:
           description: RpaasInstanceStatus defines the observed state of RpaasInstance
+          properties:
+            currentReplicas:
+              description: CurrentReplicas is the last observed number of pods.
+              format: int32
+              type: integer
+            observedGeneration:
+              description: The most recent generation observed by the rpaas operator
+                controller.
+              format: int64
+              type: integer
+            observedNginxRevisionHash:
+              description: The revision hash observed by the controller in the nginx
+                object.
+              type: string
+            podSelector:
+              description: PodSelector is the NGINX's pod label selector.
+              type: string
+            wantedNginxRevisionHash:
+              description: Revision hash calculated for the current spec.
+              type: string
           type: object
       type: object
   version: v1alpha1
