Add simple flag to check if a rpaas instance is up to date

--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -3924,6 +3924,10 @@ spec:
               description: CurrentReplicas is the last observed number of pods.
               format: int32
               type: integer
+            nginxUpdated:
+              description: NginxUpdated is true if the wanted nginx revision hash
+                equals the observed nginx revision hash.
+              type: boolean
             observedGeneration:
               description: The most recent generation observed by the rpaas operator
                 controller.
@@ -3939,6 +3943,8 @@ spec:
             wantedNginxRevisionHash:
               description: Revision hash calculated for the current spec.
               type: string
+          required:
+          - nginxUpdated
           type: object
       type: object
   version: v1alpha1
