--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -4,25 +4,83 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   creationTimestamp: null
-  name: rpaas-operator
+  name: manager-role
 rules:
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  - services
+  - endpoints
+  - persistentvolumeclaims
+  - events
+  - configmaps
+  - secrets
+  verbs:
+  - '*'
+- apiGroups:
+  - ""
+  resources:
+  - namespaces
+  verbs:
+  - get
+  - create
+- apiGroups:
+  - apps
+  resources:
+  - deployments
+  - daemonsets
+  - replicasets
+  - statefulsets
+  verbs:
+  - '*'
+- apiGroups:
+  - monitoring.coreos.com
+  resources:
+  - servicemonitors
+  verbs:
+  - get
+  - create
 - apiGroups:
   - extensions.tsuru.io
   resources:
   - rpaasinstances
+  - rpaasinstances/status
+  - rpaasinstances/scale
+  - rpaasplans
+  - rpaasflavors
+  - rpaasportallocations
+  verbs:
+  - '*'
+- apiGroups:
+  - nginx.tsuru.io
+  resources:
+  - '*'
+  verbs:
+  - '*'
+- apiGroups:
+  - autoscaling
+  resources:
+  - horizontalpodautoscalers
+  verbs:
+  - '*'
+- apiGroups:
+  - batch
+  resources:
+  - jobs
+  - cronjobs
+  verbs:
+  - '*'
+# NOTE: Pod exec is required by RPaaS API due to PR #83.
+- apiGroups: [""]
+  resources:
+  - pods/exec
   verbs:
   - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
 - apiGroups:
-  - extensions.tsuru.io
+  - metrics.k8s.io
   resources:
-  - rpaasinstances/status
+  - pods
   verbs:
+  - list
   - get
-  - patch
-  - update
