--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,9 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-go@v1
+    - uses: actions/setup-go@v2
       with:
-        go-version: 1.13.x
+        go-version: 1.16
     - run: make test
 
   integration:
@@ -29,9 +29,9 @@ jobs:
         with:
           version: "v0.9.0"
           image: 'kindest/node:v1.17.11'
-      - uses: actions/setup-go@v1
+      - uses: actions/setup-go@v2
         with:
-          go-version: 1.13.x
+          go-version: 1.16
       - uses: actions/cache@v2
         with:
           path: |
@@ -157,9 +157,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: git fetch --prune --unshallow
-    - uses: actions/setup-go@v1
+    - uses: actions/setup-go@v2
       with:
-        go-version: 1.13.x
+        go-version: 1.16
     - uses: goreleaser/goreleaser-action@v1
       with:
         version: latest
