--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -46,6 +46,17 @@ spec:
                 This is useful when combined with HostNetwork config to avoid conflicts
                 between multiple nginx instances.
               type: boolean
+            allowedUpstreams:
+              description: AllowedUpstreams holds the endpoints to which the RpaasInstance
+                should be able to access
+              items:
+                properties:
+                  host:
+                    type: string
+                  port:
+                    type: integer
+                type: object
+              type: array
             autoscale:
               description: Autoscale holds the infos used to configure the HorizontalPodAutoscaler
                 for this instance.
