--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,13 +4,23 @@ on: [push, pull_request]
 
 jobs:
   lint:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions-contrib/golangci-lint@v1
+    - uses: actions/setup-go@v2
       with:
-        golangci_lint_version: v1.23
-        args: run --config ./.golangci.yml ./...
+        go-version: '1.14'
+    - uses: actions/checkout@v2
+    - uses: actions/cache@v2
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
+    - uses: golangci/golangci-lint-action@v2
+      with:
+        version: v1.39.0
+      env:
+        GOROOT: ""
 
   test:
     runs-on: ubuntu-latest
