chore(rbac): fixing RBAC for manager and API

--- a/config/api/api.yaml
+++ b/config/api/api.yaml
@@ -29,4 +29,5 @@ spec:
           requests:
             cpu: 100m
             memory: 20Mi
+      serviceAccountName: api
       terminationGracePeriodSeconds: 10
