--- a/config/api/clusterrole_binding.yaml
+++ b/config/api/clusterrole_binding.yaml
@@ -1,11 +1,12 @@
+---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
-  name: leader-election-rolebinding
+  name: api-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: leader-election-role
+  kind: ClusterRole
+  name: api-role
 subjects:
 - kind: ServiceAccount
-  name: manager
+  name: api
