--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,6 +39,9 @@ jobs:
         with:
           version: "v0.9.0"
           image: 'kindest/node:v1.17.11'
+      - uses: 'deliverybot/helm@v1'
+        with:
+          helm: helm3
       - uses: actions/setup-go@v2
         with:
           go-version: 1.16
