--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,7 +41,14 @@ jobs:
           image: 'kindest/node:v1.17.11'
       - uses: 'deliverybot/helm@v1'
         with:
+          release: cert-manager
+          namespace: cert-manager
+          chart: cert-manager
+          repository: https://charts.jetstack.io
+          dry-run: true
           helm: helm3
+        env:
+          KUBECONFIG_FILE: '${{ env.KUBECONFIG }}'
       - uses: actions/setup-go@v2
         with:
           go-version: 1.16
