--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,9 +13,12 @@ builds:
   goarch:
   - amd64
   - 386
+  - arm64
   ignore:
   - goos: darwin
     goarch: 386
+  - goos: windows
+    goarch: arm64
 
 archives:
 - id: rpaasv2
