chore(crds): remove validation field for all CRDs

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -15,15 +15,7 @@ patches:
     group: apiextensions.k8s.io
     version: v1beta1
     kind: CustomResourceDefinition
-    name: .*rpaasinstances.*
-  patch: |-
-    - op: remove
-      path: /spec/validation
-- target:
-    group: apiextensions.k8s.io
-    version: v1beta1
-    kind: CustomResourceDefinition
-    name: .*flavors.*
+    name: .*
   patch: |-
     - op: remove
       path: /spec/validation
