--- a/config/api/clusterrole.yaml
+++ b/config/api/clusterrole.yaml
@@ -26,6 +26,13 @@ rules:
 - apiGroups:
   - ""
   resources:
+    - pods/log
+  verbs:
+    - get
+    - list
+- apiGroups:
+  - ""
+  resources:
   - pods/exec
   verbs:
   - create
