--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,6 +39,9 @@ jobs:
         with:
           version: "v0.11.1"
           image: 'kindest/node:v1.21.2'
+      - uses: azure/setup-helm@v1
+        with:
+          version: v3.7.0
       - uses: actions/setup-go@v2
         with:
           go-version: 1.16
@@ -57,7 +60,6 @@ jobs:
           INSTALL_CERT_MANAGER: "true"
           DEBUG: "true"
         run: |
-          go install github.com/helm/helm@v3.6.3 && helm version
           ./scripts/localkube-integration.sh
 
   rpaas-api-docker-image:
